# counterforce-one

./: 404.html  DEMO_SHOWCASE_README.md  README.md  deploy-docs.sh  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  sitemap.xml
.github/workflows/: docs.yml
ANALYTICS_DASHBOARD/: index.html
AUTOMATED_COLLECTION/: index.html
CLAUDE/: index.html
IMPLEMENTATION_ROADMAP/: index.html
PIPELINE_COMPLETION_SUMMARY/: index.html
PRODUCT_REQUIREMENTS/: index.html
PROJECT_STRUCTURE/: index.html
UI_ENHANCEMENT_SUMMARY/: index.html
WARP/: index.html
alembic/: env.py
alembic/versions/: 20250904_1509_a6da6b6a31aa_initial_database_schema_with_pgvector_.py  20250904_1513_1e58320c21b7_add_missing_columns_for_health_and_.py  20250905_2049_f18207ecb3c9_add_translation_confidence_field_to_.py  20250905_2050_6945748703b9_restore_missing_translation_and_.py
configuration/: index.html
contributing/: index.html
data/demo_highlight_reel/: ANNOTATION_GUIDE.md  FULL_POST_CONTENT.md  README.md  WORKFLOW_SUMMARY.md
demo/: demo_data_generator.py  demo_visualizations.py  proof_of_concept.py
docs/: index.md
docs/research/: methodology.md
examples/: README.md  quick_demo.py  real_data_research_demo.py  simple_real_data_demo.py
gradio_app/: analytics_dashboard_interface.py  annotation_interface.py  community_resilience_interface.py  enhanced_annotation_interface.py  research_analytics_interface.py
installation/: index.html
model_performance_summary/: index.html
multilingual_integration_test_report/: index.html
quickstart/: index.html
research/ethics/: index.html
research/methodology/: index.html
schema_enhancements/: index.html
scripts/: automated_collection.py
scripts/analysis/: analyze_community_responses.py  analyze_performance.py  analyze_pipeline_performance.py  analyze_translation_issues.py  collect_multilingual_data.py  dashboard.py  diagnose_scraping.py  discover_subreddits.py  enhanced_collection.py  fix_scraping.py  identify_issues.py  test_improvements.py  test_ml_models_on_reddit.py  track_progress.py  update_progress.py  update_tasks.py
search/: search_index.json
src/: analytics_dashboard.py  community_resilience_models.py  data_persistence.py  database_models_vector_backup.py  database_setup.py  embeddings_manager.py  health_content_classifier.py  health_info_quality.py  lgbtq_content_classifier.py  lgbtq_scraper.py  multilingual_scraper.py  network_analysis.py  reddit_scraper.py  research_expertise_tracker.py  research_visualizations.py  translation_service.py
tests/: README.md  conftest.py  test_reddit_scraper.py
tools/: annotate_demo_posts.py  config_manager.py  generate_demo_visualizations.py  import_demo_annotations.py  launch_dashboard.py  launch_demo_showcase.py  launch_demo_showcase_v2.py  migrate_database.py  reorganize_project.py  start.py  task_manager.py
