[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterforce-one"
version = "1.0.0"
description = "Counterforce-One: Community-Centered Health Misinformation Detection Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Academic Research License"}
authors = [
    {name = "Research Team", email = "research@example.edu"},
]
keywords = ["health", "misinformation", "community", "research", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "praw>=7.7.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "alembic>=1.12.0",
    "gradio>=4.0.0",
    "seaborn>=0.12.0",
    "nltk>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
counterforce-one = "main:main"

[project.urls]
Homepage = "https://github.com/research-team/health-misinformation-platform"
Documentation = "https://health-misinformation-platform.readthedocs.io"
Repository = "https://github.com/research-team/health-misinformation-platform.git"
Issues = "https://github.com/research-team/health-misinformation-platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gradio_app*", "config*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]